# opdsview

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix
.github/workflows/: build-test.yml  release.yml
examples/: download_one.rs  parse_feed.rs
scripts/: release
src/: app.rs  cache.rs  lib.rs  main.rs  opds.rs  reader.rs  reading.rs  storage.rs  ui.rs  worker.rs
