[package]
name = "opdsview"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for browsing OPDS e-book catalogs, with inline cover art and a built-in EPUB reader"
license = "GPL-3.0-or-later"
repository = "https://github.com/ahacop/opdsview"
homepage = "https://github.com/ahacop/opdsview"
readme = "README.md"
authors = ["Ara Hacopian <ara@hacopian.de>"]
keywords = ["tui", "opds", "ebook", "epub", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
directories = "6.0.0"
epub = "2"
html2text = "0.17"
image = "0.25.10"
ratatui = "0.30.2"
ratatui-image = { version = "11.0.4", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls", "gzip"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
toml = "0.9"
url = "2.5.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
